User info tab: title alignment fixed

--- a/src/components/routes/home/right_sidebar/panels/info_panel.scss
+++ b/src/components/routes/home/right_sidebar/panels/info_panel.scss
@@ -43,5 +43,6 @@
 
   &__avatar, &__name, &__status {
     align-self: center;
+    text-align: center;
   }
 }
